--- a/Section8/Box_Model/index.html
+++ b/Section8/Box_Model/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Hello!</h1>
+    <h1>Hello! <span>:)</span></h1>
     <div id="one">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, dolore recusandae? Ipsum
         perspiciatis cum
         esse ducimus nihil quis quisquam quaerat voluptatum autem delectus, animi reprehenderit enim repellat tempore!
@@ -24,6 +24,8 @@
         perspiciatis cum
         esse ducimus nihil quis quisquam quaerat voluptatum autem delectus, animi reprehenderit enim repellat tempore!
         Fuga, saepe?</div>
+
+    <button>Pad Me!</button>
 </body>
 
 </html>
