--- a/Section9/Opacity/index.html
+++ b/Section9/Opacity/index.html
@@ -9,7 +9,18 @@
 
 <body>
     <select>
-        <div id="rgba"></div>
+        <div id="rgba">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, molestiae! Sed ullam quaerat consectetur,
+            error quibusdam eveniet expedita reprehenderit impedit aliquid harum doloremque sapiente ex minus iusto,
+            maxime consequuntur beatae.
+        </div>
+    </select>
+    <select>
+        <div id="opacity">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, molestiae! Sed ullam quaerat consectetur,
+            error quibusdam eveniet expedita reprehenderit impedit aliquid harum doloremque sapiente ex minus iusto,
+            maxime consequuntur beatae.
+        </div>
     </select>
 </body>
 
